--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
         Abstract classes extending jBPM event listener interfaces.
     </description>
     <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <dir>${project.build.directory}</dir>
         <!-- RHPAM 7.4.1 -->
         <!--version.org.kie>7.23.0.Final-redhat-00003</version.org.kie-->
